# minitorch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: custom.py  run_mnist_multiclass.py
minitorch/: __init__.py  _logic.py  _operators.py  _ops.py  _tensor.py  _tensor_functions.py  _tensor_helpers.py  _tensor_to_wrap.py  autodiff.py  config.py  cuda_ops.py  fast_conv.py  fast_ops.py  nn.py  operators.py  scalar.py  scalar_functions.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py  testing.py
minitorch/autograd/: __init__.py
minitorch/backends/: __init__.py  cuda_ops.py  fast_ops.py  simple_ops.py
minitorch/core/: __init__.py  operators.py
minitorch/nn/: __init__.py  core.py  fast_conv.py  functional.py  functions.py  layers.py  module.py  utils.py
minitorch/nn/modules/: __init__.py  activation.py  conv.py  dropout.py  linear.py  pooling.py
minitorch/optim/: __init__.py  sgd.py
minitorch/scalar/: scalar.py  scalar_functions.py
minitorch/utils/: __init__.py  testing.py
project/: run_fast_tensor.py  run_scalar.py  run_tensor.py
tests/: test_logic.py  test_tensor.py  test_tensor_data.py
