[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minitorch"
version = "0.5"

venvPath = "."
venv = ".venv"

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
    "**/docs/slides/*",
    "old,build",
    "dist",
    "**/project/**/*",
    "**/mt_diagrams/*",
    "**/docs/**/*",
]
