[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minitorch"
version = "0.5"

venvPath = "."
venv = ".venv"

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
    "**/docs/slides/*",
    "old,build",
    "dist",
    "**/mt_diagrams/*",
    "**/docs/**/*",
]

[tool.mypy]
plugins = 'numpy.typing.mypy_plugin'
ignore_missing_imports = true
